# shanyrak_kz

./: README.md
app/: sql_app.db
app/alembic/: env.py
shanyrak-mvp/: pyproject.toml
shanyrak-mvp/app/: announcements_repository.py  comments_repository.py  database.py  favorites_repository.py  main.py  sql_app.db  users_repository.py
shanyrak-mvp/app/alembic/versions/: 25322d1ac57f_initial.py  43144e7d62a9_initial.py
